--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.18.0",
     "element-ui": "^2.2.2",
     "mavon-editor": "^2.5.2",
+    "moment": "^2.21.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
