--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "moment": "^2.21.0",
     "v-viewer": "^0.3.2",
     "vue": "^2.5.2",
+    "vue-awesome-swiper": "^3.1.3",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
